addressing more review comments for s3-aws crt driver